[package]
name = "nml_updater_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.160", features = ["derive"]}
data-encoding = "2.3.3"
ring = "0.17.0-alpha.11"
error-chain = "0.12.4"
tempfile = "3.5.0"
sysinfo = "0.28.4"
clap = { version = "4.2.4", features = ["derive"] }
